refactor(session): refactor response for all handler from session entity and fix the documentation
