# docs/swagger.json
@@ -744,7 +744,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/session.MentorSessionResponse"
+                            "$ref": "#/definitions/session.GetAllSessionsResponse"
                         }
                     },
                     "400": {
@@ -785,7 +785,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/session.GetDetailSessionResponse"
+                            "$ref": "#/definitions/session.Session"
                         }
                     },
                     "400": {
@@ -1775,32 +1775,6 @@
                 }
             }
         },
-        "session.GetDetailSessionResponse": {
-            "type": "object",
-            "properties": {
-                "average_rating": {
-                    "type": "number"
-                },
-                "image_url": {
-                    "type": "string"
-                },
-                "mentor_details": {
-                    "$ref": "#/definitions/session.MentorDetails"
-                },
-                "mentor_session_title": {
-                    "type": "string"
-                },
-                "schedule": {
-                    "type": "string"
-                },
-                "session_id": {
-                    "type": "integer"
-                },
-                "short_description": {
-                    "type": "string"
-                }
-            }
-        },
         "session.GetUserHistorySessionResponseDto": {
             "type": "object",
             "properties": {
@@ -1849,31 +1823,17 @@
                 }
             }
         },
-        "session.MentorSessionResponse": {
-            "type": "object",
-            "properties": {
-                "mentor_details": {
-                    "$ref": "#/definitions/session.MentorDetails"
-                },
-                "mentor_session_title": {
-                    "type": "string"
-                },
-                "registered": {
-                    "type": "boolean"
-                },
-                "schedule": {
-                    "type": "string"
-                },
-                "short_description": {
-                    "type": "string"
-                }
-            }
-        },
         "session.Session": {
             "type": "object",
             "properties": {
                 "average_rating": {
                     "type": "number"
+                },
+                "day": {
+                    "type": "string"
+                },
+                "duration": {
+                    "type": "integer"
                 },
                 "image_url": {
                     "type": "string"
@@ -1881,13 +1841,19 @@
                 "mentor_details": {
                     "$ref": "#/definitions/session.MentorDetails"
                 },
-                "mentor_session_title": {
-                    "type": "string"
-                },
                 "schedule": {
                     "type": "string"
                 },
+                "session_id": {
+                    "type": "integer"
+                },
                 "short_description": {
+                    "type": "string"
+                },
+                "time": {
+                    "type": "string"
+                },
+                "title": {
                     "type": "string"
                 }
             }
